Fix hr width on mobile vs. original version

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2702,7 +2702,6 @@ Left section
 
     @media (max-width: 767px) {
         .left-section hr {
-            width: 30%;
             margin-top: 10px;
         }
     }
